--- a/20250724.md
+++ b/20250724.md
@@ -1,6 +1,30 @@
 # GitとGitHub
-ローカルでの作業が8割。作業→ステージング（コミットする為の準備）→コミット
+##### ローカルでの作業が8割。作業→ステージング（コミットする為の準備）→コミット
+
+###### コミットする変更を準備
 
 `git add`
 
-`git commit`
+###### コミットする
+
+`git commit` 
+
+###### 現状の変更を確認
+
+`git status`
+
+###### ローカルリポジトリの新規作成
+
+`git init`
+
+###### gitリポジトリのコピー
+
+`git clone`
+
+###### 変更差分の確認(git addする前の変更分)
+
+`git diff`
+
+###### 変更差分の確認(git addした後の変更分)
+
+`git diff --staged`
